--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,10 +1,13 @@
 // COLORS
 $bg-color-1: #151e27;
-$bg-color-2: #212d3b;
+$bg-color-2: #273444;
 $bg-color-3: #e89c31;
+$bg-color-4: #2b5278;
+$bg-color-5: #dba858;
 
 $text-color-1: #d8d7d4; 
-$text-color-2: #1d2733;
+$text-color-2: #d6c6c6; 
+$color-2: #1d2733;
 
 $color-white: #fff;
 $color-black: #000;
