--- a/sass/components/_img-card.scss
+++ b/sass/components/_img-card.scss
@@ -26,7 +26,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: $bg-color-3;
-    color: $text-color-2;
+    color: $color-2;
     font-size: 1.5rem;
     padding: .4rem 2rem;
     border-radius: 1.5rem;
