--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,10 +9,11 @@
 @import "base/utilities";
 
 // @import "components/bg-video";
-@import "components/button";
+@import "components/icon-btn";
 @import "components/img-card";
 @import "components/prime-link";
 @import "components/slider";
+@import "components/side-menu";
 // @import "components/card";
 // @import "components/composition";
 // @import "components/feature-box";
@@ -23,7 +24,7 @@
 // @import "layout/footer";
 // @import "layout/grid";
 @import "layout/header";
-@import "layout/main";
+@import "layout/slider-section";
 // @import "layout/navigation";
 
-@import "pages/home";
+// @import "pages/home";
