--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -18,3 +18,20 @@ body {
   padding: 0;
   margin: 0;
 }
+
+// scrollbar styles
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: #37393b;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #405266;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #e89c31;
+}
