--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,16 +2,24 @@
   background-color: $bg-color-2;
   width: 100%;
   position: fixed;
+  top: 0;
   display: flex;
   justify-content: space-between;
+  justify-items: center;
   z-index: 10;
+
+  &__menu-btn-box {
+    display: flex;
+    flex-direction: row;
+    margin: 1.2rem;
+  }
 
   &__text {
     color: $color-white;
     font-size: 1.8rem;
-    padding: .5rem;
+    padding-right: .5rem;
     position: relative;
-    top: -.5rem;
+    top: .2rem;
     text-decoration: none;
   }
 
