add card component

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,7 +7,10 @@ $bg-color-5: #dba858;
 
 $text-color-1: #d8d7d4; 
 $text-color-2: #d6c6c6; 
+$text-color-3: #f5f4f4;
+$text-color-4: #b6b4b4;
 $color-2: #1d2733;
+$color-3: #222e3a;
 
 $color-white: #fff;
 $color-black: #000;
