--- a/sass/components/_prime-link.scss
+++ b/sass/components/_prime-link.scss
@@ -1,14 +1,22 @@
 .prime-link {
-  color: $color-white;
   text-decoration: none;
-  transition: all .3s;
+  transition: all 0.3s;
 
   &--medium {
     font-size: 1.8rem;
   }
+  
 
   &:hover,
   :active {
     color: $bg-color-3;
+  }
+
+  &--white {
+    color: $color-white;
+  }
+
+  &--white-gray {
+    color: $text-color-3;
   }
 }
