--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,9 +1,8 @@
 .card {
   display: flex;
   flex-direction: column;
-  align-items: center;
   background-color: $color-3;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
   width: 90%;
   margin: 4rem 0;
   padding: 2rem 1.4rem;
@@ -16,7 +15,11 @@
   &__img {
     width: 20rem;
     height: 30rem;
-    border-radius: .8rem;
+    border-radius: 0.8rem;
+  }
+
+  &__details-box {
+    margin-top: 1.4rem;
   }
 
   &__title-heading {
@@ -31,10 +34,10 @@
   }
 
   &__genre {
-    margin: .4rem 0;
+    margin: 0.4rem;
     padding: 0.5rem 1.2rem;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     border-radius: 1.7rem;
     color: $color-2;
     background-color: $bg-color-3;
@@ -56,7 +59,7 @@
     &-icon {
       color: $bg-color-3;
       font-size: 2.8rem;
-      margin-left: .6rem;
+      margin-left: 0.6rem;
 
       &--large {
         font-size: 3.5rem;
@@ -76,14 +79,14 @@
   }
 
   &__post-status {
-    margin: 0 .4rem;
-    padding: .4rem;
-    border-radius: .4rem;
+    margin: 0 0.4rem;
+    padding: 0.4rem;
+    border-radius: 0.4rem;
     font-size: 1.5rem;
     color: $color-white;
 
     &-icon {
-      margin-left: .4rem;
+      margin-left: 0.4rem;
     }
 
     &--available {
@@ -98,7 +101,6 @@
   &__synopsis {
     font-size: 1.4rem;
     text-align: justify;
-    margin: 1.3rem 0;
 
     &-title {
       font-size: 1.3rem;
@@ -110,7 +112,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    width: 92%;
+    margin-top: 2.4rem;
   }
 
   &__watch-list-btn {
@@ -128,7 +130,7 @@
     }
 
     i {
-      font-size: 2.0rem;
+      font-size: 2rem;
     }
   }
 
@@ -145,4 +147,35 @@
       }
     }
   }
+
+  @media only screen and (min-width: 480px) {
+    &__post-status-row-layout {
+      display: flex;
+      flex-flow: nowrap row;
+      justify-content: space-between;
+    }
+  
+    &__post-status-box {
+      flex-direction: column;
+      align-items: end;
+      margin-top: 40px;
+      min-width: 12.8rem;
+    }
+  
+    &__post-status {
+      margin-bottom: 1rem;
+    }
+  }
+  
+  @media only screen and (min-width: 680px) {
+    &__img-row-layout {
+      display: flex;
+      flex-direction: row;
+    }
+  
+    &__img-box {
+      margin: 2rem 0 0 2.4rem;
+    }
+  }
 }
+
