add pagination component

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,7 +21,7 @@
 @import "components/side-menu";
 @import "components/card";
 @import "components/mini-card";
-// @import "components/composition";
+@import "components/pagination";
 // @import "components/feature-box";
 // @import "components/form";
 // @import "components/popup";
