--- a/css/style.css
+++ b/css/style.css
@@ -7211,16 +7211,19 @@ body {
   font-weight: 300; }
 
 .u-margin-small {
-  margin: 1.2rem; }
+  margin: 1.2rem !important; }
 
 .u-margin-top-8 {
-  margin-top: 8rem; }
+  margin-top: 8rem !important; }
 
 .u-margin-top-4 {
-  margin-top: 4rem; }
+  margin-top: 4rem !important; }
+
+.u-margin-bottom-4 {
+  margin-bottom: 4rem !important; }
 
 .d-none {
-  display: none; }
+  display: none !important; }
 
 .icon-btn {
   color: #fff;
@@ -7479,6 +7482,28 @@ body {
       flex-direction: row; }
     .card__img-box {
       margin: 2rem 0 0 2.4rem; } }
+
+.pagination {
+  list-style: none;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  margin: 0 1rem; }
+  .pagination__item {
+    margin: 1.2rem .4rem; }
+  .pagination__link {
+    text-decoration: none;
+    background-color: #2e3642;
+    color: #f5f4f4;
+    font-size: 1.3rem;
+    padding: 0.8rem 1.6rem;
+    transition: all 0.3s;
+    border-radius: .8rem; }
+    .pagination__link:hover:not(.pagination__link--active) {
+      background-color: #224362;
+      color: #f5cd07; }
+    .pagination__link--active {
+      background-color: #274d72; }
 
 .header {
   background-color: #273444;
