--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,11 +4,15 @@ $bg-color-2: #273444;
 $bg-color-3: #e89c31;
 $bg-color-4: #2b5278;
 $bg-color-5: #dba858;
+$bg-color-6: #274d72;
+$bg-color-7: #2e3642;
+$bg-color-8: #224362;
 
 $text-color-1: #d8d7d4; 
 $text-color-2: #d6c6c6; 
 $text-color-3: #f5f4f4;
 $text-color-4: #b6b4b4;
+$text-color-5: #f5cd07;
 $color-2: #1d2733;
 $color-3: #222e3a;
 
