--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,6 +1,8 @@
-.u-margin-small { margin: 1.2rem; }
-.u-margin-top-8 { margin-top: 8rem; }
-.u-margin-top-4 { margin-top: 4rem; }
+.u-margin-small { margin: 1.2rem !important; }
+.u-margin-top-8 { margin-top: 8rem !important; }
+.u-margin-top-4 { margin-top: 4rem !important; }
 
-.d-none { display: none; }
+.u-margin-bottom-4 { margin-bottom: 4rem !important; }
+
+.d-none { display: none !important; }
 
