--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,7 +22,7 @@
 @import "components/card";
 @import "components/mini-card";
 @import "components/pagination";
-// @import "components/feature-box";
+@import "components/genre-btn";
 // @import "components/form";
 // @import "components/popup";
 // @import "components/story";
