add footer component

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,6 +15,8 @@ $text-color-4: #b6b4b4;
 $text-color-5: #f5cd07;
 $color-2: #1d2733;
 $color-3: #222e3a;
+$color-4: #1d282c;
+$color-5: #222222;
 
 $color-white: #fff;
 $color-black: #000;
