--- a/css/style.css
+++ b/css/style.css
@@ -7567,6 +7567,74 @@ body {
   justify-content: space-around;
   margin: 2rem .2rem; }
 
+.footer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 4rem;
+  background-color: #1d282c; }
+  .footer__paragraph-box {
+    margin: 1rem .8rem;
+    text-align: center; }
+  .footer__paragraph {
+    font-size: 1.3rem;
+    font-weight: bold;
+    margin: 1.3rem 0; }
+  .footer__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .footer__input-box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #222222;
+    padding: 1.4rem;
+    border-radius: .8rem; }
+  .footer__input {
+    font-family: inherit;
+    border: none;
+    outline: none;
+    font-size: 1.3rem;
+    color: #d8d7d4;
+    background-color: #222222; }
+  .footer__input-icon {
+    font-size: 1.8rem;
+    margin-left: .4rem; }
+  .footer__form-btn {
+    margin-top: .6rem;
+    border: none;
+    outline: none;
+    font-size: 1.3rem;
+    border-radius: .8rem;
+    padding: .9rem;
+    font-family: inherit;
+    background-color: #dba858; }
+    .footer__form-btn:hover {
+      cursor: pointer;
+      background-color: #e89c31; }
+  .footer__social-media {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 3.6rem 0 2.6rem 0; }
+  .footer__social-media-btn {
+    margin: .8rem 1.6rem; }
+    .footer__social-media-btn i {
+      font-size: 2.6rem; }
+  .footer__email-box {
+    text-align: center;
+    margin-bottom: .8rem; }
+  .footer__email {
+    font-size: 1.4rem;
+    text-decoration: none; }
+  .footer__copyright {
+    text-align: center;
+    margin: 1.2rem .8rem; }
+  .footer__copyright-text {
+    font-size: 1.4rem; }
+    .footer__copyright-text i {
+      margin-left: .4rem; }
+
 .header {
   background-color: #273444;
   width: 100%;
