--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,7 +23,7 @@
 @import "components/mini-card";
 @import "components/pagination";
 @import "components/genre-btn";
-// @import "components/form";
+@import "components/footer";
 // @import "components/popup";
 // @import "components/story";
 
