--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,6 +3,8 @@
 .u-margin-top-4 { margin-top: 4rem !important; }
 .u-margin-top-2 { margin-top: 2rem !important; }
 
+.u-margin-top-small { margin-top: 1.2rem !important; }
+
 .u-margin-bottom-4 { margin-bottom: 4rem !important; }
 
 .d-none { display: none !important; }
