--- a/sass/components/_mini-card.scss
+++ b/sass/components/_mini-card.scss
@@ -38,7 +38,7 @@
   }
 }
 
-.mini-card-row-layout {
+.mini-card-layout {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -46,7 +46,7 @@
 }
 
 @media only screen and (min-width: 680px) {
-  .mini-card-row-layout {
+  .mini-card-layout {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -55,5 +55,18 @@
 
   .mini-card {
     width: 46%;
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  .mini-card-layout {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 98%;
+  }
+
+  .mini-card {
+    width: 100%;
   }
 }
