--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,6 +31,7 @@
 // @import "layout/grid";
 @import "layout/header";
 @import "layout/section";
-// @import "layout/navigation";
+@import "layout/sidebar";
+@import "layout/side-menu";
 
 // @import "pages/home";
