--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,8 +1,10 @@
 .header {
   background-color: $bg-color-2;
   width: 100%;
+  height: 6.4rem;
   position: fixed;
   top: 0;
+  left: 0;
   display: flex;
   justify-content: space-between;
   justify-items: center;
