--- a/sass/layout/_side-menu.scss
+++ b/sass/layout/_side-menu.scss
@@ -5,8 +5,7 @@
           "nav header header header"
           "nav main main main"
           "nav footer footer footer";
-      grid-template-columns: 0.72fr 1fr 1fr 1fr;
-      grid-column-gap: 8rem;
+      grid-template-columns: 26rem 1fr 1fr 1fr;
       height: 100vh;
   }
   
