hide side menu scrollbar in touch devices

--- a/css/style.css
+++ b/css/style.css
@@ -7321,6 +7321,9 @@ body {
   transform: translate(100%); }
   .side-menu--show {
     transform: translate(0); }
+  @media (hover: none) {
+    .side-menu::-webkit-scrollbar {
+      display: none; } }
   .side-menu__login-btn-box {
     display: flex;
     justify-content: center;
