--- a/sass/layout/_side-menu.scss
+++ b/sass/layout/_side-menu.scss
@@ -22,6 +22,10 @@
     transform: translate(0);
   }
 
+  &::-webkit-scrollbar {
+    display: block;
+  }
+
   .main {
     width: 100%;
     grid-area: main;
